feat: update blog title

--- a/app/blog/posts/ml-eye-tracking.mdx
+++ b/app/blog/posts/ml-eye-tracking.mdx
@@ -1,6 +1,6 @@
 ---
-title: Using machine learning-based eye-tracking to control computers
-summary: Experimenting with machine learning to enable hands-free interaction with computers.
+title: Controlling Computers with our Eyes
+summary: Machine learning-based eye-tracking could be a cost-effective accessibility solution for controlling computers without using a mouse.
 publishDate: "2023-02-22"
 tags:
   - Machine Learning
